# sonos-now

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: DEVELOPMENT.md
src/sonos_now/: __init__.py  app.py  art_manager.py  ascii_art.py  cli.py  everynoise.py  grouping.py  models.py  progress.py  rendering.py  soco_backend.py  sonos_now.tcss  state.py  timefmt.py  visualizer.py
tests/: test_app_state.py  test_backend.py  test_everynoise.py  test_packaging.py  test_rendering.py  test_visualizer.py
